--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </style>
 </head>
 <body>
-  
+  <h3> PRESS THE POWER BUTTON TO SEE THE COLOR CHANGE</h3>
   
     <div class="phone" id="phone">
       <i class="bi bi-wifi"></i>
