--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <style>
         body{
-            display: flex;
+            display: grid;
             justify-content: center;
+            place-atems: center;
             align-items: center;
             color: aliceblue;
             max-height: 100vh;
