--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body{
             display: grid;
             justify-content: center;
-            place-atems: center;
+            place-items: center;
             align-items: center;
             color: aliceblue;
             max-height: 100vh;
