--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     </style>
 </head>
 <body>
-  <h3> PRESS THE POWER BUTTON TO SEE THE COLOR CHANGE   ffffffffffffffffff</h3>
+  <h3> PRESS THE POWER BUTTON TO SEE THE COLOR CHANGE </h3>
   
     <div class="phone" id="phone">
       <i class="bi bi-wifi"></i>
